fixup! adds some config flags to reduce the number of uncovered selectors

--- a/rulesets/output/ap-biology.css
+++ b/rulesets/output/ap-biology.css
@@ -487,20 +487,6 @@
   data-type: "list-container";
   container: div;
   content: pending(bListLabel) content(); }
-:pass(0) :not([data-type="alternatives"]) > iframe {
-  class: attr(class) "os-is-iframe"; }
-  :pass(0) :not([data-type="alternatives"]) > iframe::after {
-    container: a;
-    class: "os-is-link";
-    attr-target: "_window";
-    attr-href: attr(src);
-    content: "Click to view content";
-    move-to: bIframeLink; }
-  :pass(0) :not([data-type="alternatives"]) > iframe::outside {
-    container: div;
-    data-type: "alternatives";
-    class: "os-has-iframe os-has-link";
-    content: pending(bIframeLink) content(); }
 :pass(0) cnx-pi {
   move-to: trash; }
 :pass(0) :not([data-type="example"]) > [data-type="exercise"] {
